<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.example.myapplication.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/bookmarks_fragment" />
    <fragment
        android:id="@+id/trackingFragment"
        android:name="com.example.myapplication.ui.tracking.TrackingFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/tracking_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.myapplication.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment2"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.myapplication.ui.register.RegisterFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment2"
            app:destination="@id/loginFragment" />
    </fragment>


</navigation>